2007-08-26  Rodney Dawes  <dobey.pwns@gmail.com>

	* README: Update with example of usage

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac: Up version to 0.8.5 for release

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am: Handle the uninstalled pc file separate from the
	normal pc file so we don't install it

	See http://bugs.freedesktop.org/show_bug.cgi?id=10222

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac: Up version to 0.8.4 for release

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml: Fix mail status icons to be status and not
	link to the action counterparts

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11468

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml: Add mail-attachment link

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11467

2007-08-16  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml: Add emotes context, icons, and links

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac: Up version to 0.8.3 for release

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* icon-name-mapping.pl.in: Update author info

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* AUTHORS: Update my info

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	Original patch from Damien Carbery <damien.carbery@sun.com>

	* Makefile.am: Update to include icon-naming-utils-uninstalled.pc.in

	* configure.ac: Output icon-naming-utils-uninstalled.pc

	* icon-naming-utils-uninstalled.pc.in: Add uninstalled pc.in file

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=10222

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml: Link help-about to gtk-about

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11168

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	Some patching from Luca Ferretti <elle.uca@libero.it>
	
	* legacy-icon-mapping.xml:
	Update document-revert links to use ltr/rtl forms